--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Honest Motivational Quotes</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -20,7 +21,6 @@
         </div>
         <p id="quoteOutput" class="quote-output"></p>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
